force-app/main/default/objects/SFTS_Program__c/SFTS_Program__c.object-meta.xml
<CustomObject>
    <description>Catalog of internal SFTS programs (Emergency Shelter, Court Advocacy, etc.). Referenced by Service_Episode__c so every service touchpoint is tied to a program — drives grant-by-program reporting and outcomes analysis.</description>
    <label>SFTS Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFTS Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>