force-app/main/default/objects/SFTS_Program__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to retire a program without deleting (preserves historical Service_Episode links).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>