force-app/main/default/objects/SFTS_Program__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>How many concurrent participants this program can serve. Optional — leave blank for unlimited or unspecified.</description>
    <label>Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>