force-app/main/default/objects/SFTS_Program__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Bucketing for reports and dashboards.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Crisis Response</fullName><default>false</default><label>Crisis Response</label></value>
            <value><fullName>Housing</fullName><default>false</default><label>Housing</label></value>
            <value><fullName>Mental Health</fullName><default>false</default><label>Mental Health</label></value>
            <value><fullName>Legal</fullName><default>false</default><label>Legal</label></value>
            <value><fullName>Economic</fullName><default>false</default><label>Economic</label></value>
            <value><fullName>Youth</fullName><default>false</default><label>Youth</label></value>
            <value><fullName>Group Support</fullName><default>false</default><label>Group Support</label></value>
            <value><fullName>Prevention</fullName><default>false</default><label>Prevention</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>