force-app/main/default/objects/SFTS_Program__c/fields/Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFTS staff member who coordinates this program.</description>
    <label>Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Programs Coordinated</relationshipLabel>
    <relationshipName>Programs_Coordinated</relationshipName>
    <type>Lookup</type>
</CustomField>