force-app/main/default/objects/SFTS_Program__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <description>Primary funding source for this program. Matches Service_Episode.Funding_Source for cross-reporting.</description>
    <label>Primary Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>VOCA</fullName><default>false</default><label>VOCA</label></value>
            <value><fullName>FVPSA</fullName><default>false</default><label>FVPSA</label></value>
            <value><fullName>BRCF</fullName><default>false</default><label>BRCF</label></value>
            <value><fullName>Hancock County</fullName><default>false</default><label>Hancock County</label></value>
            <value><fullName>Private Donation</fullName><default>false</default><label>Private Donation</label></value>
            <value><fullName>Mixed</fullName><default>false</default><label>Mixed</label></value>
            <value><fullName>Unfunded</fullName><default>false</default><label>Unfunded</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>