force-app/main/default/objects/SFTS_Program__c/listViews/Active_Programs.listView-meta.xml
<ListView>
    <fullName>Active_Programs</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Coordinator__c</columns>
    <columns>Funding_Source__c</columns>
    <columns>Capacity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Programs</label>
</ListView>